Fix header titles and spacing in mobile and tablet

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,7 +124,32 @@ a.dropdown-item {
 
 .headerGradient {
   height: 100%;
-  padding-top: 15px;
+}
+
+#titlesLogoDiv {
+  /* imitate .flex-column sans !important */
+  flex-direction: column;
+  padding-top: 2.7rem;
+}
+
+/* different styling for header contents at different sizes */
+@media (min-width: 768px) {
+  #titlesLogoDiv {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  #titlesLogoDiv {
+    padding-top: 3.5rem;
+  }
+}
+
+/* imitate .flex-column sans !important in sizes smaller than md */
+@media (min-width: 768px) {
+  #titlesLogoDiv {
+    flex-direction: row;
+  }
 }
 
 #logo {
@@ -135,9 +160,13 @@ a.dropdown-item {
   font-family: 'Roboto Condensed', sans-serif;
   text-shadow: 5px 5px 20px #FEFDFB, 0.3px 0.3px #1F2161;
   letter-spacing: 0.3rem;
-  padding-top: 20px;
-  margin-bottom: 10px;
-  padding-bottom: 15px;
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+  .headerTitle {
+    margin-bottom: 0;
+  }
 }
 
 .headerInfoTop, .headerInfoBottom {
@@ -403,4 +432,3 @@ img.sponsorPageLogo {
 /* .caption {
   margin-top: 1.5rem;
 } */
-
